--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     <article class="main-article">
 
       <section>
-        <h1>Innovation On Demand</h1>
+        <div><h1>Innovation</h1></div>
+        <div><h1>On</h1></div>
+        <div><h1>Demand</h1></div>
         <button>Get Started</button>
       </section>
 
